<resources>
    <string name="app_name">FitnessTrackerApp</string>
    <string name="title_text">Fitness Tracker</string>
    <string name="steps_label">Steps</string>
    <string name="calories_label">Calories</string>
    <string name="distance_label">Distance</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="steps_text">0 steps</string>
    <string name="calories_text">0 kcal</string>
    <string name="distance_text">0 km</string>
    <string name="tracking_started">Tracking started.</string>
    <string name="tracking_stopped">Tracking stopped.</string>
</resources>